--- a/package.json
+++ b/package.json
@@ -159,5 +159,5 @@
     "react-redux": "^8.0.2",
     "redux-devtools": "^3.7.0"
   },
-  "proxy": "http://192.168.91.148"
+  "proxy": "http://flycp-server.com"
 }
