--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "copy-to-clipboard": "^3.3.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
@@ -159,5 +160,5 @@
     "react-redux": "^8.0.2",
     "redux-devtools": "^3.7.0"
   },
-  "proxy": "http://flycp-server.com"
+  "proxy": "https://ujhpmsnwung.top/"
 }
