更改主题颜色，增加预购快捷支付功能

--- a/package.json
+++ b/package.json
@@ -159,5 +159,5 @@
     "react-redux": "^8.0.2",
     "redux-devtools": "^3.7.0"
   },
-  "proxy": "http://flycp-server.com"
+  "proxy": "https://xsynq3whsb.top"
 }
