--- a/package.json
+++ b/package.json
@@ -160,5 +160,5 @@
     "react-redux": "^8.0.2",
     "redux-devtools": "^3.7.0"
   },
-  "proxy": "http://02fbdsjh.com"
+  "proxy": "http://flycp-server.com"
 }
