Revert "改名字以及图片和文字"
This reverts commit 55a6eb3994cf78cd0abe920855ccd8b7a3f3c0f5.

--- a/package.json
+++ b/package.json
@@ -160,5 +160,5 @@
     "react-redux": "^8.0.2",
     "redux-devtools": "^3.7.0"
   },
-  "proxy": "http://bl019.live/"
+  "proxy": "http://flycp-server.com"
 }
