--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-transition-group": "^4.4.4",
+    "antd": "^5.6.3",
     "antd-mobile": "^5.11.1",
     "axios": "^0.27.2",
     "babel-jest": "^27.4.2",
@@ -160,5 +161,5 @@
     "react-redux": "^8.0.2",
     "redux-devtools": "^3.7.0"
   },
-  "proxy": "http://flycp-server.com"
+  "proxy": "https://icickvytiuy.top/"
 }
